applications/owntracks/manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: owntracks
  labels:
    app: owntracks
spec:
  ports:
  - port: 8083
    name: web
    targetPort: 8083
  clusterIP: None
  selector:
    app: owntracks
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: owntracks
spec:
  selector:
    matchLabels:
      app: owntracks # has to match .spec.template.metadata.labels
  serviceName: "owntracks"
  replicas: 1
  template:
    metadata:
      labels:
        app: owntracks # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: owntracks
        image: owntracks/recorder:latest
        ports:
        - containerPort: 8083
          name: web
        volumeMounts:
        - name: store
          mountPath: /store
      volumes:
        - name: store
          persistentVolumeClaim:
            claimName: store
      dnsConfig:  # Fix DNS resolution in Alpine 3.11 https://github.com/kubernetes/kubernetes/issues/64924 https://github.com/gliderlabs/docker-alpine/issues/539
        options:
          - name: ndots
            value: "1"
