applications/owntracks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site
  annotations:
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Owntracks'
spec:
  tls:
  - hosts:
      - owntracks.jlh.name
    secretName: owntracks-jlh-name-tls
  rules:
  - host: owntracks.jlh.name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: owntracks
            port:
              number: 8083
